	- [kevin] $1114: properly step over jsr _bcd_math calls.
	- [roms]  $1116: don't use libtool and fixed UAE makefile for cross-compilign support.
	- [roms]  $1137: fixed clock on HW2
	- [roms]  $1143: fixed preloading of debugger 
	- [roms]  $1145: can sort ROM calls by addr, name or id
	- [roms]  $1146: fix-up window size/position with border size

- 28/03/2005, version 1.80r:
	- [kevin] $1029: merged UAE 0.8.15 from tigcc-dbg branch
	- [roms]  $1030: fixed MSVC compilation and support for new UAE
		Note: there is a post-build lock with gencpu. To fix...
	- [roms]  $1032: added instruction cycle count support
	- [kevin] $1037: restrict to actual speed based on cycle count, not instruction count.
	- [roms]  $1038: fixed Win32 multiple file selector
	- [roms]  $1048: fixed calibration loop (updated on each engine restart)
	- [roms]  $1059: added pgm_entry bkpt support in dbg_cause.c (merged from Kevin's branch)
		need to remove 1 pgm entry bkpt limitation
	- [kevin] $1079: don't start the engine when toggling "Restrict to actual speed" if it was stopped (crash fix).
	- [roms]  $1081: TiEmu hang when using F10 instead of popup menu. Fixed.
	- [roms]  $1082: use ShellExecute instead of g_spawn_async in go_to_bookmark (thx Kevin !).
	- [roms]  $1084: use a list of browsers to get the good one under Linux
	- [kevin] $1092: trigger interrupts per cycle, not per instruction. Fix interrupt rates. 
		Measure LCD exposure times in cycles rather than instructions to match the timers.

- 19/03/2005, version 1.80q:
	- [roms] $985: updated copyright notice.
	- [roms] $990: set main window title (for TIGCC-IDE).
	- [roms] $993: switched to GTK+ 2.6.4 for Windows.
	- [roms] $994: removed GTK deprecated code (-DGTK_DISABLE_DEPRECATED),
	         except for comm.c
	- [roms] $996: set default filename in file selectors
	- [roms] $997: more dissassembled lines of code in the debugger 
	         (resizeable).
	- [roms] $998: close the debugger when you press F5.