@@ -54,8 +54,6 @@ roms
 * console mode (Win32)
 
 * ON key doesn't turn calc off 
-* source code window: scrolling is somewhat broken
-* state of debugger windows is buggy
 * switch from no skin to skin w/ TI92: window is not refreshed (Linux only)
 
 -------------
